--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">coroutines-example</string>
+    <string name="login_example">mojombo</string>
+
+    <string name="github_repository">Github repositories</string>
+    <string name="github_search">Search for a user</string>
 </resources>
